# poetry-test

./: pyproject.toml
hello/module_a/: abc.py
hello/module_b/: xyz.py
poetry-test/module1/: pyproject.toml  test.py
poetry_test/module1/: pyproject.toml
poetry_test/module2/: abc.py  pyproject.toml
