[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Tomasz Rymkiewicz <kreha1@pm.me>"]

[tool.poetry.dependencies]
python = "^3.11"
module1 = { path = "poetry_test/module1" }
module2 = { path = "poetry_test/module2" }

[tool.poetry.extras]
full = ["module1", "module2"]
module1 = ["module1"]
module2 = ["module2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
